--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <input type="text" id="barcodeInput" placeholder="Scan barcode..." autofocus />
   <div class="result" id="result"></div>
   <script>
-    const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE/edit?gid=0#gid=0';
+    const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE';
     const API_KEY = 'AIzaSyApxtdRkPOKleiqSQb50pWyU_Co47ckvS8';
-    const RANGE = 'Sheet1! A1:O1651';
+    const RANGE = 'Sheet1!A1:O1651';
     let sheetData = [];
     async function loadSheetData() {
       const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`;
@@ -68,3 +68,4 @@
 </html>
 
  
+
