--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             author: row[3],
             global_item: row[1],
             vendor: row[6],
-            last_received: formadDate(row[10])
+            last_received: formatDate(row[10])
           };
         }
       }
@@ -88,4 +88,5 @@
   </script>
 </body>
 </html>
+
 
