--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     function formatDate(yyyymmdd) {
       if (!yyyymmdd || yyyymmdd.length !== 8) return 'Invalid Date' ;
-      const year = yyymmdd.substring(0, 4);
+      const year = yyyymmdd.substring(0, 4);
       const month = yyyymmdd.substring(4, 6);
       const day = yyyymmdd.substring(6, 8);
       return '${month]/${day}/${year}';
@@ -88,5 +88,6 @@
   </script>
 </body>
 </html>
+
 
 
