--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
     }
 
     function formatDate(yyyymmdd) {
-      if (!yyyymmdd || yyyymmdd.length !== 8) return 'Invalid Date' ;
+      if (!yyyymmdd || yyyymmdd.length !== 8) return 'Invalid Date';
       const year = yyyymmdd.substring(0, 4);
       const month = yyyymmdd.substring(4, 6);
       const day = yyyymmdd.substring(6, 8);
-      return '${month]/${day}/${year}';
+      return `${month}/${day}/${year}`;
     }
 
     function checkBarcode(barcode) {
@@ -71,7 +71,7 @@
             <div class="found">✅ Book Found!</div>
             <strong>Title:</strong> ${book.title}<br>
             <strong>Author:</strong> ${book.author}<br>
-            <strong>Article:</strong> ${book.global_item}<br>
+            <strong>Global Item:</strong> ${book.global_item}<br>
             <strong>Vendor:</strong> ${book.vendor}<br>
             <strong>Last Received:</strong> ${book.last_received}
           `;
@@ -88,6 +88,3 @@
   </script>
 </body>
 </html>
-
-
-
