--- a/index.html
+++ b/index.html
@@ -1,20 +1,72 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Book Return Checker</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>📚 Book Return Checker</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 20px; }
-    input { font-size: 1.2em; padding: 10px; width: 300px; }
-    .result { margin-top: 20px; font-size: 1.1em; }
-    .found { color: green; }
-    .not-found { color: red; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+
+    h1 {
+      text-align: center;
+      font-size: 1.8em;
+      margin-bottom: 10px;
+    }
+
+    .container {
+      max-width: 500px;
+      margin: auto;
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    input[type="text"] {
+      width: 100%;
+      padding: 14px;
+      font-size: 1.2em;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      box-sizing: border-box;
+      margin-bottom: 20px;
+    }
+
+    .result {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+
+    .found {
+      color: green;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    .not-found {
+      color: red;
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+
+    strong {
+      display: inline-block;
+      width: 130px;
+    }
   </style>
 </head>
 <body>
-  <h1>📚 Book Return Checker</h1>
-  <p>Scan or enter a barcode:</p>
-  <input type="text" id="barcodeInput" placeholder="Scan barcode..." autofocus />
-  <div class="result" id="result"></div>
+  <div class="container">
+    <h1>📚 Book Return Checker</h1>
+    <input type="text" id="barcodeInput" placeholder="Scan or enter barcode..." autofocus />
+    <div class="result" id="result"></div>
+  </div>
 
   <script>
     const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE';
