--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>📚 Book Return Checker</title>
+  <script src="https://unpkg.com/html5-qrcode"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -12,13 +13,11 @@
       background-color: #f9f9f9;
       color: #333;
     }
-
     h1 {
       text-align: center;
       font-size: 1.8em;
       margin-bottom: 10px;
     }
-
     .container {
       max-width: 500px;
       margin: auto;
@@ -27,7 +26,6 @@
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
-
     input[type="text"] {
       width: 100%;
       padding: 14px;
@@ -37,24 +35,33 @@
       box-sizing: border-box;
       margin-bottom: 20px;
     }
-
+    #scanner {
+      width: 100%;
+      max-width: 400px;
+      margin: auto;
+      cursor: pointer;
+      border: 2px dashed #ccc;
+      border-radius: 8px;
+      padding: 10px;
+      text-align: center;
+      background-color: #f0f0f0;
+      display: none;
+    }
     .result {
       font-size: 1.1em;
       line-height: 1.6;
+      margin-top: 20px;
     }
-
     .found {
       color: green;
       font-weight: bold;
       margin-bottom: 10px;
     }
-
     .not-found {
       color: red;
       font-weight: bold;
       margin-bottom: 10px;
     }
-
     strong {
       display: inline-block;
       width: 130px;
@@ -65,6 +72,7 @@
   <div class="container">
     <h1>📚 Book Return Checker</h1>
     <input type="text" id="barcodeInput" placeholder="Scan or enter barcode..." autofocus />
+    <div id="scanner">📷 Tap to scan barcode</div>
     <div class="result" id="result"></div>
   </div>
 
@@ -131,11 +139,37 @@
           resultDiv.innerHTML = `<div class="not-found">❌ Book not on return list.</div>`;
         }
 
-        e.target.value = ''; // Clear input
+        e.target.value = '';
       }
     });
 
-    // Preload sheet data on page load
+    function isMobileDevice() {
+      return /Mobi|Android/i.test(navigator.userAgent);
+    }
+
+    function startCameraScanner() {
+      const html5QrCode = new Html5Qrcode("scanner");
+      html5QrCode.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        (decodedText) => {
+          html5QrCode.stop();
+          document.getElementById("barcodeInput").value = decodedText;
+          document.getElementById("barcodeInput").dispatchEvent(new KeyboardEvent('keypress', { key: 'Enter' }));
+        },
+        (errorMessage) => {
+          // Ignore scan errors
+        }
+      ).catch(err => {
+        console.error("Camera start failed:", err);
+      });
+    }
+
+    if (isMobileDevice()) {
+      document.getElementById("scanner").style.display = "block";
+      document.getElementById("barcodeInput").addEventListener("focus", startCameraScanner);
+    }
+
     loadSheetData();
   </script>
 </body>
