--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
     const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE';
     const API_KEY = 'AIzaSyApxtdRkPOKleiqSQb50pWyU_Co47ckvS8';
     const RANGE = 'Sheet1!A1:O1651';
-    const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbz_wmpaqeeMw_flgg9lb2EnBfQgxk5fN4ERwU_-mjmVJXFbEIV7NXzLibHpgTASvyUeRw/exec';
-
+    const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbzXdAuJePvEktW-YxPdRZJgUVosN8rPoh2kPuouzmUzB4hB1xgOxtA_T910E5DfP06ZRw/exec;
     let sheetData = [];
     let currentBook = null;
 
@@ -221,4 +220,5 @@
   </script>
 </body>
 </html>
+
 
