--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE';
     const API_KEY = 'AIzaSyApxtdRkPOKleiqSQb50pWyU_Co47ckvS8';
     const RANGE = 'Sheet1!A1:O1651';
-    const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbzXdAuJePvEktW-YxPdRZJgUVosN8rPoh2kPuouzmUzB4hB1xgOxtA_T910E5DfP06ZRw/exec;
+    const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbzXdAuJePvEktW-YxPdRZJgUVosN8rPoh2kPuouzmUzB4hB1xgOxtA_T910E5DfP06ZRw/exec';
     let sheetData = [];
     let currentBook = null;
 
@@ -220,5 +220,6 @@
   </script>
 </body>
 </html>
+
 
 
