--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     input[type="text"] {
       width: 100%;
       padding: 14px;
-      font-size: 1.2em;
+     -size: 1.2em;
       border: 1px solid #ccc;
       border-radius: 8px;
       box-sizing: border-box;
@@ -70,6 +70,25 @@
     button:hover {
       background-color: #eee;
     }
+    #statusMessage {
+      text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+    .loading-spinner {
+      border: 4px solid #f3f3f3;
+      border-top: 4px solid #3498db;
+      border-radius: 50%;
+      width: 30px;
+      height: 30px;
+      animation: spin 1s linear infinite;
+      margin: 10px auto;
+      display: none;
+    }
+    @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
   </style>
 </head>
 <body>
@@ -87,6 +106,8 @@
     <div id="bookDetails"></div>
     <button onclick="goBack()">🔙 Back</button>
     <button onclick="submitBook()">📤 Submit</button>
+    <div class="loading-spinner" id="loadingSpinner"></div>
+    <div id="statusMessage"></div>
   </div>
 
   <!-- Not Found Screen -->
@@ -99,6 +120,7 @@
     const API_KEY = 'AIzaSyApxtdRkPOKleiqSQb50pWyU_Co47ckvS8';
     const RANGE = 'Sheet1!A1:O1651';
     const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbzXdAuJePvEktW-YxPdRZJgUVosN8rPoh2kPuouzmUzB4hB1xgOxtA_T910E5DfP06ZRw/exec';
+
     let sheetData = [];
     let currentBook = null;
 
@@ -145,25 +167,43 @@
 
     function goBack() {
       showScreen('mainScreen');
+      document.getElementById('statusMessage').textContent = '';
+      document.getElementById('loadingSpinner').style.display = 'none';
     }
 
-    function submitBook() {
+    async function submitBook() {
       if (!currentBook) return;
 
-      fetch(SUBMIT_URL, {
-        method: 'POST',
-        body: JSON.stringify(currentBook),
-        headers: {
-          'Content-Type': 'application/json'
+      const spinner = document.getElementById('loadingSpinner');
+      const statusMessage = document.getElementById('statusMessage');
+      spinner.style.display = 'block';
+      statusMessage.textContent = 'Submitting...';
+
+      try {
+        const response = await fetch(SUBMIT_URL, {
+          method: 'POST',
+          body: JSON.stringify(currentBook),
+          headers: {
+            'Content-Type': 'application/json'
+          }
+        });
+
+        const result = await response.json();
+        spinner.style.display = 'none';
+
+        if (result.status === 'success') {
+          statusMessage.style.color = 'green';
+          statusMessage.textContent = '✅ Submitted successfully!';
+          setTimeout(goBack, 1500);
+        } else {
+          statusMessage.style.color = 'red';
+          statusMessage.textContent = '❌ Submission failed: ' + result.message;
         }
-      })
-      .then(response => {
-        alert('✅ Submitted successfully!');
-        goBack();
-      })
-      .catch(error => {
-        alert('❌ Submission failed: ' + error.message);
-      });
+      } catch (error) {
+        spinner.style.display = 'none';
+        statusMessage.style.color = 'red';
+        statusMessage.textContent = '❌ Network error: ' + error.message;
+      }
     }
 
     function handleBarcode(barcode) {
