--- a/index.html
+++ b/index.html
@@ -1,265 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>📚 Book Return Checker</title>
-  https://unpkg.com/html5-qrcode</script>
-  <style>
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      padding: 20px;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    h1, h2 {
-      text-align: center;
-    }
-    .container {
-      max-width: 500px;
-      margin: auto;
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    input[type="text"] {
-      width: 100%;
-      padding: 14px;
-     -size: 1.2em;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      box-sizing: border-box;
-      margin-bottom: 20px;
-    }
-    #scanner {
-      width: 100%;
-      max-width: 400px;
-      margin: auto;
-      cursor: pointer;
-      border: 2px dashed #ccc;
-      border-radius: 8px;
-      padding: 10px;
-      text-align: center;
-      background-color: #f0f0f0;
-      display: none;
-    }
-    .found {
-      color: green;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    .not-found {
-      color: red;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-    strong {
-      display: inline-block;
-      width: 130px;
-    }
-    button {
-      padding: 10px 20px;
-      margin: 10px 5px;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #eee;
-    }
-    #statusMessage {
-      text-align: center;
-      margin-top: 15px;
-      font-weight: bold;
-    }
-    .loading-spinner {
-      border: 4px solid #f3f3f3;
-      border-top: 4px solid #3498db;
-      border-radius: 50%;
-      width: 30px;
-      height: 30px;
-      animation: spin 1s linear infinite;
-      margin: 10px auto;
-      display: none;
-    }
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>📚 Book Return Auto Submit</title>
+<style>
+  body { font-family: Arial; padding: 20px; }
+  .container { max-width: 500px; margin: auto; }
+  .status { margin-top: 15px; font-weight: bold; }
+</style>
 </head>
 <body>
+<div class="container">
+  <h1>📚 Book Return Checker</h1>
+  <input type="text" id="barcodeInput" placeholder="Enter barcode..." autofocus>
+  <div id="bookDetails"></div>
+  <button id="submitBtn" style="display:none;">Submit to Google Form</button>
+  <div class="status" id="statusMessage"></div>
+</div>
 
-  <!-- Main Screen -->
-  <div id="mainScreen" class="container">
-    <h1>📚 Book Return Checker</h1>
-    <input type="text" id="barcodeInput" placeholder="Scan or enter barcode..." autofocus />
-    <div id="scanner">📷 Tap to scan barcode</div>
-  </div>
+<script>
+const FORM_URL = "https://docs.google.com/forms/d/e/1FAIpQLSdxDH5XNcQgYo0c8UOKguy8vJPXEK9xB10yJpTOwNH4mfDcwA/formResponse";
 
-  <!-- Book Found Screen -->
-  <div id="bookFoundScreen" class="container" style="display:none;">
-    <h2>✅ Book Found</h2>
-    <div id="bookDetails"></div>
-    <button onclick="goBack()">🔙 Back</button>
-    <button onclick="submitBook()">📤 Submit</button>
-    <div class="loading-spinner" id="loadingSpinner"></div>
-    <div id="statusMessage"></div>
-  </div>
+// ✅ Your actual entry IDs
+const ENTRY_TITLE = "entry.246099778";
+const ENTRY_AUTHOR = "entry.1304120790";
+const ENTRY_ARTICLE = "entry.1917608776";
+const ENTRY_LAST_RECEIVED = "entry.128692095";
+const ENTRY_VENDOR = "entry.500217163";
 
-  <!-- Not Found Screen -->
-  <div id="notFoundScreen" class="container" style="display:none;">
-    <h2 class="not-found">❌ Book not on return list.</h2>
-  </div>
+let currentBook = null;
 
-  <script>
-    const SHEET_ID = '1jLDj1w1nvptP2s0QRGCbidWLEChqSWLkDkBe2hNUpsE';
-    const API_KEY = 'AIzaSyApxtdRkPOKleiqSQb50pWyU_Co47ckvS8';
-    const RANGE = 'Sheet1!A1:O1651';
-    const SUBMIT_URL = 'https://script.google.com/macros/s/AKfycbzXdAuJePvEktW-YxPdRZJgUVosN8rPoh2kPuouzmUzB4hB1xgOxtA_T910E5DfP06ZRw/exec';
+// Simulate book lookup (replace with real logic or Google Sheets API)
+function lookupBook(barcode) {
+  // Example: Replace this with your actual lookup logic
+  if (barcode === "12345") {
+    return {
+      title: "Sample Book",
+      author: "John Doe",
+      article: "A-001",
+      last_received: "01/01/2025",
+      vendor: "ABC Vendor"
+    };
+  }
+  return null;
+}
 
-    let sheetData = [];
-    let currentBook = null;
+document.getElementById("barcodeInput").addEventListener("keypress", function(e) {
+  if (e.key === "Enter") {
+    const barcode = e.target.value.trim();
+    const book = lookupBook(barcode);
+    const detailsDiv = document.getElementById("bookDetails");
+    const submitBtn = document.getElementById("submitBtn");
 
-    async function loadSheetData() {
-      const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values/${RANGE}?key=${API_KEY}`;
-      try {
-        const response = await fetch(url);
-        const data = await response.json();
-        sheetData = data.values || [];
-      } catch (error) {
-        console.error("Failed to fetch sheet data:", error);
-      }
+    if (book) {
+      currentBook = book;
+      detailsDiv.innerHTML = `
+        <p><strong>Title:</strong> ${book.title}</p>
+        <p><strong>Author:</strong> ${book.author}</p>
+        <p><strong>Article:</strong> ${book.article}</p>
+        <p><strong>Last Received:</strong> ${book.last_received}</p>
+        <p><strong>Vendor:</strong> ${book.vendor}</p>
+      `;
+      submitBtn.style.display = "inline-block";
+    } else {
+      detailsDiv.innerHTML = "<p style='color:red;'>❌ Book not found</p>";
+      submitBtn.style.display = "none";
     }
+    e.target.value = "";
+  }
+});
 
-    function formatDate(yyyymmdd) {
-      if (!yyyymmdd || yyyymmdd.length !== 8) return 'Invalid Date';
-      const year = yyyymmdd.substring(0, 4);
-      const month = yyyymmdd.substring(4, 6);
-      const day = yyyymmdd.substring(6, 8);
-      return `${month}/${day}/${year}`;
-    }
+document.getElementById("submitBtn").addEventListener("click", async function() {
+  if (!currentBook) return;
 
-    function checkBarcode(barcode) {
-      for (let row of sheetData) {
-        if (row[0] === barcode) {
-          return {
-            title: row[2],
-            author: row[3],
-            global_item: row[1],
-            vendor: row[6],
-            last_received: formatDate(row[10])
-          };
-        }
-      }
-      return null;
-    }
+  const formData = new FormData();
+  formData.append(ENTRY_TITLE, currentBook.title);
+  formData.append(ENTRY_AUTHOR, currentBook.author);
+  formData.append(ENTRY_ARTICLE, currentBook.article);
+  formData.append(ENTRY_LAST_RECEIVED, currentBook.last_received);
+  formData.append(ENTRY_VENDOR, currentBook.vendor);
 
-    function showScreen(screenId) {
-      document.getElementById('mainScreen').style.display = 'none';
-      document.getElementById('bookFoundScreen').style.display = 'none';
-      document.getElementById('notFoundScreen').style.display = 'none';
-      document.getElementById(screenId).style.display = 'block';
-    }
-
-    function goBack() {
-      showScreen('mainScreen');
-      document.getElementById('statusMessage').textContent = '';
-      document.getElementById('loadingSpinner').style.display = 'none';
-    }
-
-    async function submitBook() {
-      if (!currentBook) return;
-
-      const spinner = document.getElementById('loadingSpinner');
-      const statusMessage = document.getElementById('statusMessage');
-      spinner.style.display = 'block';
-      statusMessage.textContent = 'Submitting...';
-
-      try {
-        const response = await fetch(SUBMIT_URL, {
-          method: 'POST',
-          body: JSON.stringify(currentBook),
-          headers: {
-            'Content-Type': 'application/json'
-          }
-        });
-
-        const result = await response.json();
-        spinner.style.display = 'none';
-
-        if (result.status === 'success') {
-          statusMessage.style.color = 'green';
-          statusMessage.textContent = '✅ Submitted successfully!';
-          setTimeout(goBack, 1500);
-        } else {
-          statusMessage.style.color = 'red';
-          statusMessage.textContent = '❌ Submission failed: ' + result.message;
-        }
-      } catch (error) {
-        spinner.style.display = 'none';
-        statusMessage.style.color = 'red';
-        statusMessage.textContent = '❌ Network error: ' + error.message;
-      }
-    }
-
-    function handleBarcode(barcode) {
-      const book = checkBarcode(barcode);
-      if (book) {
-        currentBook = book;
-        document.getElementById('bookDetails').innerHTML = `
-          <strong>Title:</strong> ${book.title}<br>
-          <strong>Author:</strong> ${book.author}<br>
-          <strong>Global Item:</strong> ${book.global_item}<br>
-          <strong>Vendor:</strong> ${book.vendor}<br>
-          <strong>Last Received:</strong> ${book.last_received}
-        `;
-        showScreen('bookFoundScreen');
-      } else {
-        showScreen('notFoundScreen');
-        setTimeout(() => showScreen('mainScreen'), 1000);
-      }
-    }
-
-    document.getElementById('barcodeInput').addEventListener('keypress', async function(e) {
-      if (e.key === 'Enter') {
-        const barcode = e.target.value.trim();
-        if (!sheetData.length) await loadSheetData();
-        handleBarcode(barcode);
-        e.target.value = '';
-      }
-    });
-
-    function isMobileDevice() {
-      return /Mobi|Android/i.test(navigator.userAgent);
-    }
-
-    async function startCameraScanner() {
-      const html5QrCode = new Html5Qrcode("scanner");
-      html5QrCode.start(
-        { facingMode: "environment" },
-        { fps: 10, qrbox: 250 },
-        async (decodedText) => {
-          html5QrCode.stop();
-          if (!sheetData.length) await loadSheetData();
-          handleBarcode(decodedText);
-        },
-        (errorMessage) => {}
-      ).catch(err => console.error("Camera start failed:", err));
-    }
-
-    if (isMobileDevice()) {
-      document.getElementById("scanner").style.display = "block";
-      document.getElementById("barcodeInput").addEventListener("focus", startCameraScanner);
-    }
-
-    loadSheetData();
-  </script>
+  try {
+    await fetch(FORM_URL, { method: "POST", body: formData, mode: "no-cors" });
+    document.getElementById("statusMessage").textContent = "✅ Submitted successfully!";
+    document.getElementById("submitBtn").style.display = "none";
+  } catch (error) {
+    document.getElementById("statusMessage").textContent = "❌ Submission failed.";
+  }
+});
+</script>
 </body>
 </html>
+
 
 
 
