--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>📚 Book Return Checker</title>
+  <script src="https://unpkg.com/html5-qrcode" type="text/javascript"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -32,6 +33,18 @@
       border-radius: 8px;
       box-sizing: border-box;
       margin-bottom: 20px;
+    }
+    #scanner {
+      width: 100%;
+      max-width: 400px;
+      margin: auto;
+      cursor: pointer;
+      border: 2px dashed #ccc;
+      border-radius: 8px;
+      padding: 10px;
+      text-align: center;
+      background-color: #f0f0f0;
+      display: none;
     }
     .found {
       color: green;
@@ -64,6 +77,7 @@
   <div id="mainScreen" class="container">
     <h1>📚 Book Return Checker</h1>
     <input type="text" id="barcodeInput" placeholder="Scan or enter barcode..." autofocus />
+    <div id="scanner">📷 Tap to scan barcode</div>
   </div>
 
   <div id="bookFoundScreen" class="container" style="display:none;">
@@ -191,10 +205,35 @@
       }
     });
 
+    function isMobileDevice() {
+      return /Mobi|Android/i.test(navigator.userAgent);
+    }
+
+    async function startCameraScanner() {
+      const html5QrCode = new Html5Qrcode("scanner");
+      html5QrCode.start(
+        { facingMode: "environment" },
+        { fps: 10, qrbox: 250 },
+        async (decodedText) => {
+          html5QrCode.stop();
+          if (!sheetData.length) await loadSheetData();
+          handleBarcode(decodedText);
+        },
+        (errorMessage) => {}
+      ).catch(err => console.error("Camera start failed:", err));
+    }
+
+    if (isMobileDevice()) {
+      document.getElementById("scanner").style.display = "block";
+      document.getElementById("scanner").addEventListener("click", startCameraScanner);
+    }
+
     loadSheetData();
   </script>
 </body>
 </html>
+
+
 
 
 
